@@ -5,6 +5,7 @@ X X
     * Change Hoe + Bane of Arthropods, now left-click starts storm, right-click stops
     * Enhance Bow + Respiration = stapled arrows: try TNT, water, lava (spawn egg, potions...)
     * Enhance Shears + Looting, now can be used to acquire saddle from saddled pigs
+    * Enhance Hoe + Fire Protection = sensor, now can show information on entities
     * Partial (warning: incomplete!) WorldGuard support
 
 2012-02-22  0.6.4
